app/assets/stylesheets/styles.css.scss
$navbarBackgroundHighlight: white;
$navbarBackground: white;
$btnPrimaryBackground: purple;

@import 'bootstrap';

@font-face {
    font-family: 'Helvetica';
    src:url('fonts/Helvetica.otf');
    src:url('fonts/Helvetica.otf?#iefix') format('embedded-opentype'),
        url('fonts/Helvetica.ttf') format('truetype'),
        url('fonts/Helvetica.svg#Helvetica') format('svg');
    font-weight: normal;
    font-style: normal;
}  

@font-face {
    font-family: 'Helvetica';
    src:url('fonts/Helvetica.otf');
    src:url('fonts/Helvetica.otf?#iefix') format('embedded-opentype'),
        url('fonts/Helvetica.ttf') format('truetype'),
        url('fonts/Helvetica.svg#Helvetica') format('svg');
    font-weight: normal;
    font-style: normal;
}   
   
html, body {
   font-family: "Helvetica",Helvetica,sans-serif;
   color: #4d4d4d;
   height: 100%;
   overflow-x: hidden;
   background-color: #f5f5f5;
}

p {
    font-size: 16px;
    letter-spacing: 0.5px;
    line-height: 25px;
}

a {
    color: #3787ad;
    outline: 0 !important;
    text-decoration: none !important;
}

h1 h2 h3 h4 h5 h6 {
    font-family: "Helvetica",Helvetica,sans-serif;
    color: #3787ad !important;
    line-height: 1.4em;
}

h1 {
    font-size: 20px;
}

hr {
    -moz-border-top-colors: none;
    -moz-border-right-colors: none;
    -moz-border-bottom-colors: none;
    -moz-border-left-colors: none;
    border-image: none;
    border-style: solid none;
    border-color: #afcfde;
}

/* Typography */
@font-face {
  font-family: 'Nokia Pure Headline';    
  src: url('/assets/nokiapureheadlinerg-webfont.eot');
  src: url('/assets/nokiapureheadlinerg-webfont.eot?iefix') format('eot'),
  url('/assets/nokiapureheadlinerg-webfont.woff') format('woff'),
  url('/assets/nokiapureheadlinerg-webfont.ttf') format('truetype'),
  url('/assets/nokiapureheadlinerg-webfont.svg#webfont3AwWkQXK') format('svg');
  font-weight: normal;
  font-style: normal;
}

.no-click {
    pointer-events: none;
}

/* Navbar */

.navbar {
    /* min-height: 104px !important; */
}

.navbar-nav {
    float: left;
    margin: 10px 0px 10px !important;
}

.navbar-default {
    background-color: #3787ad;
    border-bottom: solid 6px;
    border-color: #afcfde;
}

.navbar-default .navbar-nav > li > a {
    color: #fff;
    font-size: 12px;
    font-family: 'Helvetica',Helvetica,sans-serif;
    letter-spacing: 0.2em;
}

.navbar-default .navbar-nav > li > a:hover {
    color: #fff;
}

.navbar-default .navbar-nav > li > a:focus {
    color: #fff;
}

.navbar-default .navbar-brand {
    color: #fff;
}

.navbar > .container .navbar-brand, .navbar > .container-fluid .navbar-brand {
  margin-left: 0px;
  margin-top: -20px;
}

.navbar-default .navbar-toggle {
    border: none;
}

.navbar-toggle {
  position: relative;
  float: right;
  padding: 9px 10px;
  margin: 25px 15px 25px;
  background-color: white;
  background-image: none;
}

.navbar > .container .navbar-brand, .navbar > .container-fluid .navbar-brand {
    margin-left: 0px;
}

@media (min-width: 768px) {
.navbar-nav {
  float: left;
  margin: 0;
  margin-top: 20px;
}
}

.btn {
    display: inline-block;
    margin-bottom: 0px;
    font-family: 'Helvetica',Helvetica,sans-serif;;
    font-size: 12px;
    font-weight: normal;
    text-align: center;
    vertical-align: middle;
    cursor: pointer;
    background-image: none;
    border: 2px solid transparent;
    white-space: nowrap;
    padding: 12px 40px;
    line-height: 1.42857;
    border-radius: 4px;
    letter-spacing: 0.2em;
    -moz-user-select: none;
}

.btn-danger {
    color: #FFF;
    background-color: #3787ad;
    border-color: #3787ad;
}

.btn-danger:hover {
    color: #FFF;
    background-color: #afcfde;
    border-color: #afcfde;
}

.btn-danger:focus {
    color: #FFF;
    background-color: #afcfde;
    border-color: #afcfde;
}

.btn-inactive {
    color: #FFF;
    background-color: #ddd;
    border-color: #ddd;
}

.btn-inactive:hover {
    color: #FFF;
    background-color: #ddd;
    border-color: #ddd;
}

.btn-inactive:focus {
    color: #FFF;
    background-color: #ddd;
    border-color: #ddd;
}

.btn-primary {
    color: #fff;
    background-color: #27ae60;
    border-color: #27ae60;
}

.btn-primary:hover {
    color: #FFF;
    background-color: #2ecc71;
    border-color: #2ecc71;
}

.btn-primary:focus {
    color: #FFF;
    background-color: #2ecc71;
    border-color: #2ecc71;
}

.jumbotron {
    background-color: transparent;
    color: #00365C;
    width: 100%;
    z-index: 100%;
    padding-left: 0px;
    padding-right: 0px;
    margin-bottom: 0px;
}

.jumbotron h1 {
    font-weight: 300;
    font-size: 40px;
}

.jumbotron p {
    font-size: 16px;
}

.help-inline {
    color: #CC0767;
    margin-left: 10px;
}


.title-header-1 {
    /* background-color: #F5F5F5; */
    background-image: url(http://www.streamingwell.tv/wp-content/uploads/2015/06/bicycle-1400.jpg);
    color: #00365C;
    width: 100%;
    padding-left: 0px;
    padding-right: 0px;
    margin-bottom: 0px;
    margin-top: -25px;
    padding-top: 150px;
    padding-bottom: 150px;
    background-repeat: no-repeat;
    border-bottom: solid 6px;
    border-color: #afcfde;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

.title-header-2 {
    /* background-color: #F5F5F5; */
    background-image: url(http://www.streamingwell.tv/wp-content/uploads/2015/06/running-1400.jpg);
    color: #00365C;
    width: 100%;
    padding-left: 0px;
    padding-right: 0px;
    margin-bottom: 0px;
    margin-top: -55px;
    padding-top: 150px;
    padding-bottom: 150px;
    background-repeat: no-repeat; 
    border-bottom: solid 6px;
    border-color: #afcfde;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}
/* ... */

